<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <LinearLayout
        android:id="@+id/wrlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/wrName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:ellipsize="none"
			android:singleLine="false"
            android:textColor="@android:color/black"
            android:text="@string/NoLoadedProj"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/wrCounts"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/wrShortCounts" />

            <TextView
                android:id="@+id/wrCountsNum"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="5555.55" />
            
            <TextView
                android:id="@+id/wrCosts"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginLeft="4dp"
                android:layout_height="wrap_content"
                android:text="@string/wrCosts" />

            <TextView
                android:id="@+id/wrCostsNum"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="5555.55" />

            <TextView
                android:id="@+id/totalostxt"
                android:layout_width="wrap_content"
                android:layout_marginLeft="4dp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/worksTotal" />

            <TextView
                android:id="@+id/wrTotalNum"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="5555.55" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/wrLayoutOnOff"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"        
        android:orientation="vertical" >        
        
        <ToggleButton
            android:id="@+id/tgbtnOnOff"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:enabled="false" />
        
    </LinearLayout>    

</LinearLayout>
